# LTL

./: .gitignore  CMakeLists.txt  Image.cpp  Image.h  Makefile  README.md  Ship.cpp  Ship.h  Sprite.cpp  Sprite.h  main.cpp
CMakeModules/: FindOpenGL.cmake  FindSDL2_image.cmake
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: private.xml
